--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,14 +9,14 @@ environment:
   sdk: ">=2.2.2 <3.0.0"
 
 dependencies:
-  meta: ^1.1.8
-  analyzer: ^0.39.10
-  build: ^1.2.2
-  logging: ^0.11.3+2
-  source_gen: ^0.9.8
-  chopper: ^3.0.6
+  meta: ^1.2.3
+  analyzer: ^0.40.4
+  build: ^1.5.0
+  logging: ^0.11.4
+  source_gen: ^0.9.7+1
+  chopper: ^3.0.3
   code_builder: ^3.5.0
-  dart_style: ^1.3.3
+  dart_style: ^1.3.7
   built_collection: ^4.3.2
 
 dev_dependencies:
