--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,13 +10,13 @@ environment:
 
 dependencies:
   meta: ^1.2.3
-  analyzer: ^0.40.4
+  analyzer: ^0.40.0
   build: ^1.5.0
   logging: ^0.11.4
-  source_gen: ^0.9.7+1
-  chopper: ^3.0.3
+  source_gen: ^0.9.8
+  chopper: ^3.0.6
   code_builder: ^3.5.0
-  dart_style: ^1.3.7
+  dart_style: ^1.3.9
   built_collection: ^4.3.2
 
 dev_dependencies:
